# sentinal

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  sentinel.html  setup.sh
.github/workflows/: ci.yml
firmware/esp32_panic_button/: esp32_panic_button.ino
firmware/esp32_sensor_hub/: esp32_sensor_hub.ino
firmware/esp32_siren_controller/: esp32_siren_controller.ino
sentinel/: __init__.py  config.py
sentinel/api/: server.py
sentinel/iot/: __init__.py  device_manager.py  mqtt_broker.py  smart_home.py
sentinel/models/: database.py
sentinel/services/: follower_tracker.py  inference.py  notifier.py  recorder.py  threat_assessor.py
sentinel/training/: data_generator.py  models.py  train.py
sentinel/utils/: visualization.py
static/: index.html
