[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai"
dynamic = ["version"]
description = "Autonomous AI personal safety system with real-time threat detection, IoT sensor fusion, and multi-day follower tracking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Debasish"},
]
keywords = ["ai", "safety", "surveillance", "iot", "computer-vision", "threat-detection", "mediapipe", "yolo", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Home Automation",
]

[project.scripts]
sentinel = "run:cli"

[tool.setuptools.dynamic]
version = {attr = "sentinel.__version__"}

[tool.setuptools.packages.find]
include = ["sentinel*"]
